# SUSTech-CS205-Project

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
project1/: report.md  test.sh
project1/src/: mul.cpp
project2/: .clang-format  CMakeLists.txt  report.md
project2/include/: Constants.hpp  Input.hpp  Num.hpp  OperatorHelper.hpp  Operators.hpp  SimpleEnumReflection.hpp  TestHelper.hpp  Testers.hpp
project2/src/: CMakeLists.txt  Main.cpp
project2/src/Operators/: Divide.cpp  Minus.cpp  Multiply.cpp  NumWapper.cpp  OperatorBase.cpp  Plus.cpp  Pow.cpp  Sqrt.cpp
project2/src/Storage/: Num.cpp
project2/src/Test/: DivideTester.cpp  InputTester.cpp  MinusTester.cpp  MultiplyTester.cpp  PlusTester.cpp  PowTester.cpp  SqrtTester.cpp
project2/src/Utility/: Input.cpp  OperatorHelper.cpp  TestHelper.cpp
project3/: .clang-format  CMakeLists.txt  DemoLog.txt  README.md  report.md
project3/header/: Mat.h
project3/modules/: Mat.c
project3/samples/: Demo.c  ErrorSamples.c
project4/: .clang-format  CMakeLists.txt  README.md  report.md
project4/cmake/: C-Matrix.cmake  C-MatrixConfig.cmake  preconfig.cmake
project4/include/: Mat.h
project4/log/: Improved-test.txt  OpenBlas-test.txt
project4/src/: CMakeLists.txt  GOTO_mul.c  Mat.c  mul_imporved.c  mul_plain.c
project4/test/: CMakeLists.txt  test.c
project5/: .clang-format  CMakeLists.txt  CMakeSettings.json  refresh.sh  report.md
project5/modules/: CMakeLists.txt
project5/modules/core/: CMakeLists.txt  core.hpp
project5/modules/core/include/: Mat.hpp  Mat.inl  Mat_helper.hpp  Mat_helper.inl
project5/modules/core/src/: PreSpecialized.cpp
project5/test/: CMakeLists.txt
project5/test/include/: test.hpp
project5/test/src/: Functions.cpp  test.cpp
